fix alignment panel header

--- a/components/expansion-panel/src/vwc-expansion-panel.scss
+++ b/components/expansion-panel/src/vwc-expansion-panel.scss
@@ -33,23 +33,25 @@
 .expansion-panel-header {
 	@include typography.typography-cat-shorthand('subtitle-2');
 	position: relative;
-	display: flex;
+	display: grid;
 	width: 100%;
-	align-items: flex-end;
+	align-items: center;
 	padding: 16px;
 	border: 0 none;
 	background: transparent;
 	cursor: pointer;
+	grid-template-areas: '. caption . .' 'leading header meta trailing';
+	grid-template-columns: auto 1fr auto auto;
+	grid-template-rows: auto auto;
 	text-align: left;
 
+	&.with-meta {
+		grid-template-columns: auto 1fr 0.35fr auto;
+	}
 
 	.leading-icon,
 	.trailing-icon {
 		display: flex;
-
-		:host(:not([dense])) & {
-			margin-bottom: 4px;
-		}
 
 		vwc-icon {
 			#{icon-variables.$icon-size-variable-name}: var(#{expansion-panel-variables.$expansion-panel-icon-size-variable-name}, 20px);
@@ -61,38 +63,32 @@
 		display: -webkit-box;
 		overflow: hidden;
 		-webkit-box-orient: vertical;
+		grid-area: header;
 		-webkit-line-clamp: 2;
 		/* stylelint-enable property-no-vendor-prefix */
 		/* stylelint-enable value-no-vendor-prefix */
-	}
-	.header-wrapper {
-		display: flex;
-		flex: 1;
-		flex-direction: column;
 		margin-inline-end: auto;
 	}
+
 	.caption {
 		@include typography.typography-cat-shorthand('body-2');
 		color: var(--vvd-color-neutral-80);
+		grid-area: caption;
 	}
 
 	.meta {
 		@include typography.typography-cat-shorthand('body-2-bold');
 		overflow: hidden;
-		max-width: 20%;
 		flex-shrink: 0;
 		color: var(--vvd-color-neutral-70);
-
+		grid-area: meta;
 		margin-inline-start: 1rem;
 		text-overflow: ellipsis;
 		white-space: nowrap;
-		:host(:not([dense])) & {
-			margin-block-end: 4px;
-		}
-
 	}
 
 	.leading-icon {
+		grid-area: leading;
 		/* stylelint-disable selector-no-qualifying-type */
 		vwc-icon,
 		slot[name="icon"i]::slotted(vwc-icon) {
@@ -102,6 +98,7 @@
 	}
 
 	.trailing-icon {
+		grid-area: trailing;
 		/* stylelint-disable selector-no-qualifying-type */
 		vwc-icon,
 		slot[name="trailingIcon"i]::slotted(vwc-icon) {
